--- a/sb-demo-web/src/main/resources/application-prod.properties
+++ b/sb-demo-web/src/main/resources/application-prod.properties
@@ -35,7 +35,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=false
 
 spring.servlet.multipart.max-file-size=50Mb
-spring.servlet.multipart.max-request-size: 100Mb
+spring.servlet.multipart.max-request-size=100Mb
 
 ## mybatis ##
 mybatis.config-location=classpath:/sqlmap-config.xml
